<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_settings"
        android:orderInCategory="101"
        android:showAsAction="ifRoom"
        android:icon="@drawable/settings" 
        android:title="@string/action_settings" 
        android:visible="true"/>
    <item android:id="@+id/action_connect" 
        android:title="@string/connect" 
        android:icon="@drawable/search" 
        android:showAsAction="ifRoom" 
        android:orderInCategory="100" 
        android:visible="true"/>
    <item android:id="@+id/led_indication" 
        android:orderInCategory="99" 
        android:title="@string/led_indication" 
        android:icon="@drawable/red_led" 
        android:showAsAction="ifRoom" 
        android:visible="true" 
        android:enabled="false"/>
    <item android:id="@+id/action_send_file" android:orderInCategory="98" android:title="@string/send_file" android:visible="true"></item>

</menu>
